--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <i class="fas fa-bars toggle-menu"></i>
           <ul>
             <li><a class="active" href="#">HOME</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">PRICING</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#Services">SERVICES</a></li>
+            <li><a href="#Porto">PORTFOLIO</a></li>
+            <li><a href="#Price">PRICING</a></li>
+            <li><a href="#About">ABOUT</a></li>
+            <li><a href="#Contact">CONTACT</a></li>
           </ul>
           <div class="form">
             <i class="fas fa-search"></i>
@@ -67,7 +67,7 @@
     </div>
     <!-- end landing -->
     <!-- start services -->
-    <section>
+    <section id="Services">
       <div class="container">
         <div class="component">
           <h2>SERVICES</h2>
@@ -161,7 +161,7 @@
     <!-- end design services -->
     <!-- start portofolio -->
     <section>
-      <div class="container">
+      <div id="Porto" class="container">
         <div class="component">
           <h2>PORTFOLIO</h2>
           <p>
@@ -260,7 +260,7 @@
     <!-- end video -->
     <!-- start about -->
     <section>
-      <div class="container">
+      <div id="About" class="container">
         <div class="component">
           <h2>ABOUT US</h2>
           <p>
@@ -384,7 +384,7 @@
         </div>
       </div>
     </div>
-    <section>
+    <section id="Price">
       <div class="container">
         <div class="component">
           <h2>PRICING</h2>
@@ -513,7 +513,7 @@
     </div>
     <!-- start contact us  -->
     <section>
-      <div class="container">
+      <div id="Contact" class="container">
         <div class="component">
           <h2>Contact Us</h2>
           <p>
